force-app/main/default/objects/ccrz__E_PriceGroup__c/ccrz__E_PriceGroup__c.object-meta.xml
<CustomObject>
    <description>Used to determine alternative pricing for accounts outside of the standard account grouping.  Primary uses are for contracts, relative (upgrade/downgrade), segmented and contextual based pricing.</description>
    <label>CC Price Group</label>
    <nameField>
        <displayFormat>PG-{0000000000}</displayFormat>
        <label>CC Price Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Price Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>