force-app/main/default/objects/ccrz__E_PriceGroup__c/fields/ccrz__GroupName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__GroupName__c</fullName>
    <description>Naming for this price group.</description>
    <inlineHelpText>Naming for this price group.</inlineHelpText>
    <label>Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>