force-app/main/default/objects/ccrz__E_PriceGroup__c/fields/ccrz__GroupType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__GroupType__c</fullName>
    <description>Categorization of the price group.  This may contain values such as Contract, Upgrade, etc.</description>
    <inlineHelpText>Categorization of the price group.  This may contain values such as Contract, Upgrade, etc.</inlineHelpText>
    <label>Group Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>